--- a/site/css/main.css
+++ b/site/css/main.css
@@ -4,12 +4,15 @@
 @font-face {
   font-family: "Avenir Black";
   src: url(../font/Avenir_Black.ttf); }
+
 @font-face {
   font-family: "Avenir Medium";
   src: url(../font/Avenir_Medium.ttf); }
+
 @font-face {
   font-family: "Avenir Light";
   src: url(../font/Avenir_Light.ttf); }
+
 /****************
      Colors
 ****************/
@@ -22,10 +25,10 @@
 .background-blue, #data #data_cols div a:hover {
   background-color: #0b8fb2; }
 
-.text-green, #body-bigCount {
+.text-green, #body-bigCount, #header #header-logo {
   color: #29bd66; }
 
-.background-green, [data-query]:hover, input:focus, input:hover, #query [data-query]:hover {
+.background-green, [data-query]:hover {
   background-color: #29bd66; }
 
 .text-grey, #data .accent, footer .footer-text--divider {
@@ -69,21 +72,32 @@ a, a:visited {
 [data-query] {
   display: inline-block;
   transition: background-color 75ms;
-  cursor: pointer;
-  border-bottom: 1px dotted #2e2e2e; }
+  cursor: pointer; }
 
 input {
-  transition: background-color 400ms;
-  width: 14.35rem;
-  padding: 0.425rem 0.45rem 0.3rem 0.425rem;
-  border: 1px solid black;
-  border-radius: 1px;
-  font-family: "Avenir Medium";
-  color: #000;
-  font-size: 0.8rem;
-  word-spacing: -0.05rem; }
+  transition: all 400ms;
+  width: 100%;
+  padding: 18px 20px 14px 20px;
+  border: 1px solid #E0E0E0;
+  border-radius: 2px;
+  color: #4D4D4D;
+  font-size: 19px; }
+  input:focus {
+    border-color: #d5d5d5; }
   input:focus, input:hover {
     outline: none; }
+
+::-webkit-input-placeholder {
+  color: #D2D2D2; }
+
+:-moz-placeholder {
+  color: #D2D2D2; }
+
+::-moz-placeholder {
+  color: #D2D2D2; }
+
+:-ms-input-placeholder {
+  color: #D2D2D2; }
 
 /*****************
       Body
@@ -96,11 +110,6 @@ body {
   background: #fff;
   color: #000;
   font-family: "Avenir Light"; }
-  body main {
-    position: absolute;
-    left: 50%;
-    margin-left: -15rem;
-    width: 32rem; }
 
 #body-bigError {
   position: fixed;
@@ -127,34 +136,49 @@ body {
     font-size: 1.05vw;
     letter-spacing: 0.025vw; }
 
+#searchWrap {
+  width: 533px;
+  margin: 0 auto; }
+
 #header {
-  margin: 0.45rem auto -0.25rem auto;
-  width: 30.25rem;
   font-family: "Avenir Black";
   text-transform: uppercase;
-  font-size: 2.825rem; }
+  margin-top: 115px;
+  position: relative;
+  display: block;
+  text-align: center; }
   #header #header-code {
-    position: relative;
-    top: 0.525rem;
-    right: -1.9rem;
-    width: 11.65rem;
-    font-family: "Avenir Medium";
+    position: absolute;
+    top: -4px;
+    width: 100%;
     text-align: right;
-    font-size: 0.65rem;
+    font-family: "Avenir Medium";
+    font-size: 9px;
+    letter-spacing: 1.6px;
     text-transform: none;
-    letter-spacing: 0.03rem; }
+    right: 125px; }
     #header #header-code #header-code-property {
       display: inline-block;
       cursor: pointer; }
   #header #header-logo {
-    text-shadow: 0px 0px 0px #7d7d7d; }
+    font-size: 60px;
+    margin-bottom: 15px; }
 
 #slogan {
-  background: white;
-  font-size: 1rem;
-  line-height: 1.35rem;
-  letter-spacing: 0.015rem;
-  font-family: "Avenir Medium"; }
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 26px;
+  line-height: 1.4; }
+  #slogan strong {
+    font-family: "Avenir Medium"; }
+
+#subSlogan {
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 27px; }
+  #subSlogan a {
+    border-bottom: 1px dotted black;
+    padding: 0 0 2px 0; }
 
 .sectionHeader {
   margin: 1.3rem 0rem 0.65rem 0.05rem;
@@ -167,34 +191,59 @@ body {
   text-transform: uppercase;
   font-size: 0.625rem;
   letter-spacing: 0.05rem; }
-  #query #query_or {
-    margin: 0rem 0.3rem; }
-  #query [data-query] {
-    margin-right: 0.115rem;
-    padding: 0.4rem 0.6rem 0.25rem 0.6rem;
-    background: black;
-    line-height: 1.1rem;
-    color: white;
-    font-family: "Avenir Black"; }
+  #query [data-query]:hover {
+    background: none; }
+  #query [data-query]:last-child {
+    margin-right: 0; }
+  #query #queryButtons {
+    margin-top: 15px;
+    float: left;
+    width: 100%;
+    padding: 0 130px; }
+    #query #queryButtons span {
+      border-radius: 3px;
+      line-height: 1.1rem;
+      color: black;
+      font-family: "Avenir Black";
+      width: 33.33%;
+      float: left;
+      text-align: center; }
+    #query #queryButtons p {
+      padding: 0 2px 1px 2px;
+      margin: 0;
+      border-bottom: 1px dotted #BBB;
+      display: inline; }
 
 #search_ {
-  display: inline-block;
-  position: static;
-  margin-bottom: 0.125rem; }
+  position: relative; }
   #search_ #searchSymbols {
     position: absolute;
-    margin-top: 0.2rem;
-    left: 6rem;
-    font-size: 1.10rem; }
+    margin-top: 16px;
+    right: 16px;
+    font-size: 19px;
+    color: #79bd95;
+    z-index: 10; }
+
+#howTo {
+  margin-top: 100px; }
+  #howTo p {
+    margin-bottom: 30px; }
+    #howTo p b {
+      transition: all 150ms; }
+      #howTo p b:hover {
+        background: rgba(1, 1, 1, 0.06); }
 
 #data {
   position: relative;
-  margin-top: 1.175rem;
-  font-size: 0.8rem; }
-@-moz-document url-prefix() {
-  #data {
+  margin-top: 50px;
+  font-size: 13px;
+  float: left;
+  width: 100%;
+  display: none;
+  @-moz-document url-prefix() {
     /* This is to space out the Firefox scrollbar. */
-    padding-right: 0.65rem; } }
+    padding-right: 0.65rem; }
+ }
   #data #data_cols div {
     position: absolute;
     font-family: "Avenir Black";
@@ -269,11 +318,15 @@ footer {
 
 #subscribe_ {
   position: fixed !important;
-  top: 2rem;
-  right: 2.2rem;
-  background: black; }
+  top: 25px;
+  right: 25px;
+  width: 210px; }
   #subscribe_ #subscribe {
-    width: 13.75rem; }
+    width: 100%;
+    font-size: 12px;
+    font-family: "Avenir Light";
+    padding: 10px 10px 9px 10px;
+    color: #6F6F6F; }
 
 /***************
     Initial
@@ -281,5 +334,5 @@ footer {
 #header-code, #header-logo, #subscribe {
   opacity: 0; }
 
-#body-bigError, #body-bigCount, main, .data_more, #data_scroll, footer, #subscribe_ {
+#body-bigError, #body-bigCount, #slogan, #subSlogan, #search_, #queryButtons span, .data_more, #data_scroll, footer, #subscribe_ {
   display: none; }
